--- a/views/account/profile.jade
+++ b/views/account/profile.jade
@@ -10,7 +10,7 @@ block content
     a(href='http://forum.boundstar.com/register') register first
     | .
   //- p=JSON.stringify(user.profile)
-  //- h4 Rank: #{user.profile.rank}
+  //- h4 Rank: #{user.rank}
   .page-header
     h3 Edit Your Profile Information
   br
@@ -20,25 +20,25 @@ block content
       label.col-sm-3.control-label(for='Rank') Rank
       i.fa.fa-lock(style='font-size:24px;margin-top: 8px')
       .col-sm-4
-        input.form-control(type='Rank', name='Rank', id='Rank', value='#{user.profile.rank}', disabled)
+        input.form-control(type='Rank', name='Rank', id='Rank', value='#{user.rank}', disabled)
     .form-group
       label.col-sm-3.control-label(for='player') Vote Nickname
       i.fa.fa-lock(style='font-size:24px;margin-top: 8px')
       .col-sm-4
-        if user.profile.rank === 'Recruit'
-          input.form-control(type='player', name='player', id='player', value='#{user.profile.player}')
+        if user.rank === 'Recruit'
+          input.form-control(type='player', name='player', id='player', value='#{user.player}')
         else
-          input.form-control(type='player', name='player', id='player', value='#{user.profile.player}', disabled)
+          input.form-control(type='player', name='player', id='player', value='#{user.player}', disabled)
     .form-group
       label.col-sm-3.control-label(for='forum') Forum Username
-      if user.profile.rank === 'Recruit'
+      if user.rank === 'Recruit'
       else
         i.fa.fa-lock(style='font-size:24px;margin-top: 8px')
       .col-sm-4
-        if user.profile.rank === 'Recruit'
-          input.form-control(type='forum', name='forum', id='forum', value='#{user.profile.forum}')
+        if user.rank === 'Recruit'
+          input.form-control(type='forum', name='forum', id='forum', value='#{user.forum}')
         else
-          input.form-control(type='forum', name='forum', id='forum', value='#{user.profile.forum}', disabled)
+          input.form-control(type='forum', name='forum', id='forum', value='#{user.forum}', disabled)
     //- .form-group
       label.col-sm-3.control-label(for='invites') Invites
       .col-sm-4
@@ -51,29 +51,29 @@ block content
     .form-group
       label.col-sm-3.control-label(for='name') TeamSpeak Handle
       .col-sm-4
-        input.form-control(type='text', name='name', id='name', value='#{user.profile.name}')
+        input.form-control(type='text', name='name', id='name', value='#{user.name}')
     .form-group
       label.col-sm-3.control-label(for='alt_characters') Alternate Characters, one per line
       .col-sm-4
-        textarea.form-control(name='alt_characters', id='alt_characters', rows='5') #{user.profile.alt_characters}
+        textarea.form-control(name='alt_characters', id='alt_characters', rows='5') #{user.alt_characters}
 
     //- .form-group
       label.col-sm-3.control-label(for='gender') Gender
       .col-sm-4
         label.radio
-          input(type='radio', checked=user.profile.gender=='male', name='gender', value='male', data-toggle='radio')
+          input(type='radio', checked=user.gender=='male', name='gender', value='male', data-toggle='radio')
           span Male
         label.radio
-          input(type='radio', checked=user.profile.gender=='female', name='gender', value='female', data-toggle='radio')
+          input(type='radio', checked=user.gender=='female', name='gender', value='female', data-toggle='radio')
           span Female
     .form-group
       label.col-sm-3.control-label(for='location') Location
       .col-sm-4
-        input.form-control(type='text', name='location', id='location', value='#{user.profile.location}')
+        input.form-control(type='text', name='location', id='location', value='#{user.location}')
     //- .form-group
       label.col-sm-3.control-label(for='website') Website
       .col-sm-4
-        input.form-control(type='text', name='website', id='website', value='#{user.profile.website}')
+        input.form-control(type='text', name='website', id='website', value='#{user.website}')
     .form-group
       label.col-sm-3.control-label(for='gravatar') Gravatar
       .col-sm-4
@@ -81,11 +81,11 @@ block content
     //- .form-group
       label.col-sm-3.control-label(for='starbound_password') Starbound Password
       .col-sm-4
-        input.form-control(type='text', name='starbound_password', id='starbound_password', value='#{user.profile.starbound_password}')
+        input.form-control(type='text', name='starbound_password', id='starbound_password', value='#{user.starbound_password}')
     //- .form-group
       label.col-sm-3.control-label(for='server_tokens') Tokens
       .col-sm-4
-        input.form-control(type='text', name='server_tokens', id='server_tokens', value='#{user.profile.server_tokens}', disabled)
+        input.form-control(type='text', name='server_tokens', id='server_tokens', value='#{user.server_tokens}', disabled)
     .form-group
       .col-sm-offset-3.col-sm-4
         button.btn.btn.btn-primary(type='submit')
