--- a/views/profile.jade
+++ b/views/profile.jade
@@ -2,8 +2,9 @@ extends layout
 
 block content
   //- code(height='500')!=JSON.stringify(player, null, 2, 2)
+  //- !=JSON.stringify(forum, null, 2, 2)
   .page-header
-    h1 #{player.player}
+    h1 #{title}
   p Forum Profile: 
     - var forum_url = 'http://forum.boundstar.com/user/'+player.forum.replace(/ /g,'-').toLowerCase();
     a(href='#{forum_url}', target='_blank') #{player.forum}
@@ -22,4 +23,25 @@ block content
       p.visible-md.visible-lg
     p.visible-md.visible-lg Worlds: #{player.system.size}
   br
+  if forum
+    p
+      img(src='#{forum.uploadedpicture}')
+    p postcount #{forum.postcount}
+    p status #{forum.status}
+    p reputation #{forum.reputation}
+    p lastonline #{forum.lastonline}
+    p joindate #{forum.joindate}
+    p profileviews #{forum.profileviews}
+    //- p signature #{forum.signature}
+    p followingCount #{forum.followingCount}
+    p followerCount #{forum.followerCount}
+    if forum.posts
+      h3 Recent posts
+      ul
+        each post in forum.posts
+          //- !=JSON.stringify(post, null, 2, 2)
+          li Topic: 
+            a(href='http://forum.boundstar.com/topic/#{post.tid}/##{post.pid}') #{post.topic.title}
+            |  in 
+            a(href='http://forum.boundstar.com/category/#{post.topic.cid}') #{post.category.name}
   p under construction
