--- a/views/rank.jade
+++ b/views/rank.jade
@@ -18,7 +18,6 @@ block content
           h3 Rank
           p 
             span(style='font-size:48px') #{user.rank}
-          h3 #{user.system.size} worlds
         if forum_stats
           if forum_stats.posts 
             .well.col-md-2#connections
@@ -91,11 +90,12 @@ block content
               span(style='font-size:48px') 0
             h5 coming soon
         if user.rank == 'Explorer' && user.system
-          .well.col-md-2#connections
-            h3 Worlds
-            p 
-              span(style='font-size:48px') #{user.system.size}
-            h5 world saves coming in a week or so
+          if user.system.size
+            .well.col-md-2#connections
+              h3 Worlds
+              p 
+                span(style='font-size:48px') #{user.system.size}
+              h5 world saves coming in a week or so
         //- if users
           p=JSON.stringify(users)
       else
