--- a/views/profile.jade
+++ b/views/profile.jade
@@ -5,9 +5,10 @@ block content
   //- !=JSON.stringify(forum, null, 2, 2)
   .page-header
     h1 #{title}
-  p Forum Profile: 
-    - var forum_url = 'http://forum.boundstar.com/user/'+player.forum.replace(/ /g,'-').toLowerCase();
-    a(href='#{forum_url}', target='_blank') #{player.forum}
+  if player.forum 
+    p Forum Profile: 
+      - var forum_url = 'http://forum.boundstar.com/user/'+player.forum.replace(/ /g,'-').toLowerCase();
+      a(href='#{forum_url}', target='_blank') #{player.forum}
   if player.thismonth_votes
     p Votes: #{player.thismonth_votes}
   else
