--- a/views/default.html.jade
+++ b/views/default.html.jade
@@ -83,10 +83,10 @@ if document
               |  - or - 
               a(href='http://prose.io/#digitaldesigndj/boundstar-content/edit/master/' + document.relativePath.replace('docs/','') ).text-info Edit and improve this page via Prose!
 style.
-  .recruit { color: #334d5c !important; text-shadow: 1px 1px 0 #000; }
-  .player { color: #45b29d !important; text-shadow: 1px 1px 0 #000; }
-  .explorer { color: #e27a3f !important; text-shadow: 1px 1px 0 #000; }
-  .member { color: #efc94c !important; text-shadow: 1px 1px 0 #000; }
+  .recruit, a .recruit { color: #334d5c !important; text-shadow: 1px 1px 0 #000; }
+  .player, a .player { color: #45b29d !important; text-shadow: 1px 1px 0 #000; }
+  .explorer, a .explorer { color: #e27a3f !important; text-shadow: 1px 1px 0 #000; }
+  .member, a .member { color: #efc94c !important; text-shadow: 1px 1px 0 #000; }
 script.
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-42766222-2']);
