small copy edits

--- a/views/home.jade
+++ b/views/home.jade
@@ -20,6 +20,7 @@ block content
             p You need 5 rep, 5 posts and 3 votes to rank up to Explorer.
           when "Explorer"
             p You are at the top rank for now.
+            P You should go claim a multi-planet system to prepare for the coming of StarryDex.
             if user.system_coords == ""
               p You should claim a system.
         ul
