--- a/views/rank.jade
+++ b/views/rank.jade
@@ -114,8 +114,8 @@ block content
       each vote, i in votes
         if user.player == vote.nickname
           - voted = true
-          .col-md-12
-              h4 Thanks for voting
+          //- .col-md-12
+              //- h4 Thanks for voting
     if !voted
       .col-md-12
         h4 You should vote!
