--- a/views/account/profile.jade
+++ b/views/account/profile.jade
@@ -5,7 +5,7 @@ block content
     h3 Welcome!
   p This is where you can edit your profile information. Once you get this setup you won't need to come back here very often.
   p You can find your 
-    a(href='http://forum.boundstar.com/users/recent', style='line-height: 36px') forum name here
+    a(href='http://forum.boundstar.com/users/latest', style='line-height: 36px') forum name here
     | . Just make sure you 
     a(href='http://forum.boundstar.com/register') register first
     | .
