--- a/views/boundstar_players.jade
+++ b/views/boundstar_players.jade
@@ -22,6 +22,12 @@ block content
   //- .col-sm-12
   .page-header
     h1 Boundstar Players
+  .col-md-12
+    p You should check your 
+      a(href='/rank') Rank Card
+      |  to see your latest stats. Visiting your 
+      a(href='/rank') Rank Card
+      |  will update your profile.
   .row
     .visible-xs
       .col-xs-6
