--- a/views/default.html.jade
+++ b/views/default.html.jade
@@ -87,6 +87,7 @@ style.
   .player, .player a { color: #45b29d !important; text-shadow: 1px 1px 0 #000; }
   .explorer, .explorer a { color: #e27a3f !important; text-shadow: 1px 1px 0 #000; }
   .member, .member a { color: #efc94c !important; text-shadow: 1px 1px 0 #000; }
+  .builder, .builder a { color: #df5a49 !important; text-shadow: 1px 1px 0 #000; }
 script.
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-42766222-2']);
