--- a/views/partials/sidebar.jade
+++ b/views/partials/sidebar.jade
@@ -4,6 +4,8 @@
       br
       br
       br
+      a(href='http://gum.co/boundstar' target='_blank')
+        img(src='/img/donate-button.png')
       br
       br
       script(src='http://starbound-servers.net/embed.js?id=313&type=votes&size=small')
