--- a/views/boundstar_players.jade
+++ b/views/boundstar_players.jade
@@ -3,10 +3,16 @@ block content
   - var vote_count = 0
   - var rep_count = 0
   - var post_count = 0
+  - var builder_count = 0;
+  - var member_count = 0;
   - var explorer_count = 0;
   - var player_count = 0;
   - var recruit_count = 0;
   each player in players
+    if player.player && player.rank === 'Builder'
+      - builder_count++
+    if player.player && player.rank === 'Member'
+      - member_count++
     if player.player && player.rank === 'Explorer'
       - explorer_count++
     if player.player && player.rank === 'Player'
@@ -30,6 +36,14 @@ block content
       |  will update your profile.
   .row
     .visible-xs
+      //- .col-xs-6
+        .well
+          h1.builder #{builder_count}
+          p Builders
+      .col-xs-6
+        .well
+          h1.member #{member_count}
+          p Members
       .col-xs-6
         .well
           h1.explorer #{explorer_count}
@@ -63,6 +77,12 @@ block content
           p signups since 4/1/14
     .visible-sm.visible-md.visible-lg
       .col-sm-3.col-md-2
+        //- .well
+          h1.builder #{builder_count}
+          p Builders
+        .well
+          h1.member #{member_count}
+          p Members
         .well
           h1.explorer #{explorer_count}
           p Explorers
@@ -87,6 +107,49 @@ block content
         .well
           h1 #{players.length}
           p signups since 4/1/14
+
+    .col-sm-9.col-md-10
+      legend.member Members
+      table#visits.table.table-bordered.table-striped.table-condensed
+        thead
+          tr
+            td 
+              strong Character
+            td 
+              strong Forum
+            td
+              strong Donation
+            td
+              strong Votes
+            td.visible-md.visible-lg
+              strong Rep
+            td.visible-md.visible-lg
+              strong Posts
+            td.visible-md.visible-lg
+              strong System
+            td.visible-md.visible-lg
+              strong Worlds
+        tbody
+          each player in players
+            //- p=JSON.stringify(player)
+            if player.player && player.rank === 'Member'
+              tr
+                td 
+                  a(href='/player/#{player.player}') #{player.player}
+                td 
+                  - var forum_url = 'http://forum.boundstar.com/user/'+player.forum.replace(/ /g,'-').toLowerCase();
+                  a(href='#{forum_url}', target='_blank') #{player.forum}
+                td $#{player.donation_amount/100}
+                td #{player.thismonth_votes}
+                td.visible-md.visible-lg #{player.forum_rep}
+                td.visible-md.visible-lg #{player.forum_posts}
+                if player.system
+                  if player.system.sector != ''
+                    td.visible-md.visible-lg #{player.system.sector} #{player.system.x}, #{player.system.y}: #{player.system.planet}
+                  else
+                    td.visible-md.visible-lg
+                  td.visible-md.visible-lg #{player.system.size}
+
     .col-sm-9.col-md-10
       legend.explorer Explorers
       table#visits.table.table-bordered.table-striped.table-condensed
