Gumroad popup script, keeps users on site for donations!

--- a/views/default.html.jade
+++ b/views/default.html.jade
@@ -12,6 +12,7 @@ if document
       script(src='https://code.jquery.com/jquery-2.1.0.min.js')
       script(src='//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js')
       script(src='/assets/js/jquery.backstretch.min.js')
+      script(defer='defer' src='https://gumroad.com/js/gumroad.js')
       script.
         $(function($){
           $.backstretch("/assets/img/bg.png", {speed: 500});
