--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,6 +12,7 @@ html(lang="en")
     link(href='/starbound-font/starbound-font.css' rel='stylesheet')
     != js('application')
     script(defer='defer' src='/assets/js/jquery.backstretch.min.js')
+    script(defer='defer' src='https://gumroad.com/js/gumroad.js')
     script.
       $(function($){
         $.backstretch("/assets/img/bg.png", {speed: 500});
