--- a/views/partials/sidebar.jade
+++ b/views/partials/sidebar.jade
@@ -4,7 +4,7 @@
       br
       br
       br
-      a(href='http://gum.co/boundstar' target='_blank')
+      a(href='http://gum.co/boundstar')
         img(src='/img/donate-button.png')
       br
       br
