--- a/views/home.jade
+++ b/views/home.jade
@@ -36,7 +36,7 @@ block content
           li Recruit
           li Player
           li Explorer
-          li Member*
+          li Member
           li Builder*
           li Modder*
           li Creator/Artisan*
