--- a/views/home.jade
+++ b/views/home.jade
@@ -84,7 +84,7 @@ block content
     .col-md-8
       .page-header
         h1 Welcome to Boundstar
-      p.lead A new era has started
+      p.lead A mostly self governing universe
       p Server name: 
         strong boundstar.com
         |  and connect with your Starbound client, no password needed.
@@ -100,6 +100,7 @@ block content
         li Vote on server-lister.
         li Set your main character name.
       p After you complete all these tasks, you will rank up to Player! This will lock your player and forum name.
+      p Or you can just go login and play.
       br
       .col-sm-2
         a(href='/signup').btn.btn-success Register
